# aurora

./: .gitignore  README.md  pyproject.toml  run.py
checkpoints/: model_0.pt
data/: __init__.py  download.py  load_dataset.py  preprocess.py
notebooks/: data_exploration.ipynb  data_processing.ipynb
src/: __init__.py  dataset.py  train.py
utils/: __init__.py  tqdm_stream.py
