[project]
name = "aurora"
version = "0.1.0"
description = "Stock instrument forecast and portfolio optimization"
authors = [
    {name = "KushalSuvan",email = "kushalsuvanjenamani@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.51.3,<5.0.0)",
    "gluonts (>=0.16.1,<0.17.0)",
    "ujson (>=5.10.0,<6.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "torch (>=2.7.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
